--- a/style.css
+++ b/style.css
@@ -840,7 +840,7 @@ opacity: 1;
 @media (max-width: 770px) {
 #moreBtn 
 {
-  left: -3%;
+  left: -3% !important;
   color: hsl(45, 100%, 53%);
   text-shadow: 2 black;
   background-image: url("https://ryecode.github.io/portfolio/ImageBank/galaxyBG.png");
