added marquee element

--- a/style.css
+++ b/style.css
@@ -429,6 +429,41 @@ body {
   scale: 1.35;
 }
 
+.RyeLogoMarqueeRight
+{
+  border-radius: 50%;  
+  margin-left: 0px;
+  -webkit-animation: logoSpin 4s linear infinite;
+  -moz-animation: logoSpin 4s linear infinite;
+  animation: logoSpin 4s linear infinite;
+  opacity: 1;
+  box-shadow: 0 0 1em hsl(45, 100%, 53%);
+}
+
+.RyeLogoMarqueeRight:hover
+{
+  border-radius: 50%;  
+  scale: 1.25;
+}
+
+.RyeLogoMarqueeLeft
+{
+  border-radius: 50%;  
+  margin-left: 0px;
+  -webkit-animation: logoSpinLeft 4s linear infinite;
+  -moz-animation: logoSpinLeft 4s linear infinite;
+  animation: logoSpinLeft 4s linear infinite;
+  opacity: 1;
+  box-shadow: 0 0 1em hsl(45, 100%, 53%);
+}
+
+.RyeLogoMarqueeLeft:hover
+{
+  border-radius: 50%;  
+  scale: 1.25;
+}
+
+
 /* ///////////////////////////////// LOADING ANIMATION ////////////////// */
   .loading
     {
@@ -548,7 +583,8 @@ body {
       transform: scale(1, 1.05);
   }
 
-  .certificate {
+  .certificate 
+  {
     position: relative;
     margin: 30px 0px 0px 0px;
     padding: 0;
@@ -556,7 +592,9 @@ body {
     text-align: center;
     box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%);
     transform: translateX(10%);
-}
+    border: 5px hsl(45, 100%, 53%);
+    border-style: ridge;
+  }
 
 @media (max-width: 770px) {
 .certificate {
@@ -677,7 +715,7 @@ body {
     width: 90%;
 
     font-weight: 800;
-    font-size: 0.95em;
+    font-size: 1.2em;
     opacity: 1;
   }
 
@@ -1347,7 +1385,13 @@ to {opacity: 1;}
 100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
+@-moz-keyframes logoSpin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes logoSpin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes logoSpin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
+@-moz-keyframes logoSpinLeft { 100% { -moz-transform: rotate(-360deg); } }
+@-webkit-keyframes logoSpinLeft { 100% { -webkit-transform: rotate(-360deg); } }
+@keyframes logoSpinLeft { 100% { -webkit-transform: rotate(-360deg); transform:rotate(-360deg);
 
 /* TILT BOX EFFECT */
 
