--- a/style.css
+++ b/style.css
@@ -590,6 +590,8 @@ body {
     text-align: center;
     box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%);
     transform: translateX(10%);
+    border: 5px hsl(45, 100%, 53%);
+    border-style: ridge;
 }
 
 @media (max-width: 770px) {
