--- a/style.css
+++ b/style.css
@@ -1033,6 +1033,14 @@ border: 5px hsl(45, 100%, 53%);
 border-style: ridge;
 }
 
+#certPic {
+  animation: flip 5s;
+  animation-iteration-count: infinite;
+  box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%); 
+  border: 5px hsl(45, 100%, 53%);
+  border-style: ridge;
+  }
+
 #skills {
 float: left;
 width: 20%;
@@ -1174,7 +1182,7 @@ color: black;
   {
     background: linear-gradient(to right, rgba(4, 4, 4, 0.875), rgba(32, 32, 31, 0.873));
     position: relative;
-    height: 110px;
+    height: 140px;
     margin-top: 10px;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -1201,6 +1209,8 @@ color: black;
   {
     text-align: right;
     margin-top: 0;
+    margin-right: 0;
+    width: 100%;
   }
 
 .neon-button2,
@@ -1454,3 +1464,56 @@ z-index: 1;
 .t_over:nth-child(7):hover ~ .tilt-box{ transform: rotateX(20deg) rotateY(20deg);}
 .t_over:nth-child(8):hover ~ .tilt-box{ transform: rotateX(20deg) rotateY(0deg);}
 .t_over:nth-child(9):hover ~ .tilt-box{ transform: rotateX(20deg) rotateY(-20deg);}
+
+
+/* CERTIFICATE GALLERY EFFECTS */
+
+#Gallery { 
+  box-sizing: border-box; 
+  justify-content: center;
+  text-align: center;}
+      img { vertical-align: middle; margin-bottom: 5px;}
+    .containerGallery { 
+      position: relative; 
+      border: 10px hsl(45, 100%, 53%); 
+      border-style: groove;}
+    .mySlides {  display: none;}
+    .cursor { cursor: pointer;}
+    .prev,
+    .next {
+        cursor: pointer;
+        position:absolute;
+        top: 30%;
+        width: auto;
+        padding: 16px;
+        margin-top: 50px;
+        color: rgb(10, 9, 9);
+        font-weight: bold;
+        font-size: 20px;
+        border-radius: 5px 5px 5px 5px;
+        user-select: none;
+        -webkit-user-select: none;
+        background: linear-gradient(to top, rgb(177, 150, 1), rgb(141, 121, 5))
+        }
+    .prev { left: 10px; border-radius: 4px 4px 4px 4px;}
+    .next { right: 10px; border-radius: 4px 4px 4px 4px;}
+    .prev:hover,
+    .next:hover {  background-color: rgba(0, 0, 0, 0.8);}
+    .caption-container {
+        text-align: center;
+        background-color: #222;
+        padding: 2px 16px;
+        color: white;
+        }
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+        }
+    .column {
+        float: left;
+        width: 16.66%;
+        }
+    .demo { opacity: 0.5;}
+    .active,
+    .demo:hover { opacity: 1; }
